--- a/src/app/core/tareas/component/tareas/lista-tareas.component.html
+++ b/src/app/core/tareas/component/tareas/lista-tareas.component.html
@@ -71,7 +71,7 @@
     @if (tareas$ | async; as tareasDemo) {
     @for (tarea of tareasDemo; track tarea.id; let i = $index) {
     <app-tarjeta-tarea [tarea]="tarea" [uidActual]="'guest'" [miembros]="miembros" [delay]="i"
-      (asignadoCambio)="invitaALogin()" (tareaCompletada)="invitaALogin()">
+      (asignadoCambio)="invitaALogin()" (penalizarAbandono)="invitaALogin()" (tareaCompletada)="invitaALogin()">
     </app-tarjeta-tarea>
     }
     }
@@ -160,7 +160,8 @@
   <div class="grid-tareas">
     @for (tarea of tareas; track tarea.id; let i = $index) {
     <app-tarjeta-tarea [tarea]="tarea" [uidActual]="usuario?.uid || ''" [miembros]="miembros" [delay]="i"
-      (asignadoCambio)="reasignarTarea(tarea.id, $event)" (tareaCompletada)="finalizarTarea(tarea)">
+      (asignadoCambio)="onAsignadoCambio(tarea, $event)" (penalizarAbandono)="onPenalizarAbandono($event)"
+      (tareaCompletada)="onTareaCompletada(tarea)">
     </app-tarjeta-tarea>
     }
   </div>
