--- a/src/app/core/tareas/component/tareas/tarjeta-tarea.component.html
+++ b/src/app/core/tareas/component/tareas/tarjeta-tarea.component.html
@@ -5,6 +5,20 @@
   <div class="tarea-header">
     <div class="emoji-icon">{{ emoji }}</div>
     <h3 class="titulo-tarea">{{ tarea.nombre }}</h3>
+
+    @if (peticionPendiente || peticionParaMi) {
+    <span class="peticion-campana-wrapper">
+      <button class="peticion-campana" mat-icon-button (click)="onClickCampana($event)"
+        [ngClass]="{ 'es-mia': !!peticionParaMi }" aria-label="Petición de asignación" [matTooltip]="peticionParaMi
+        ? 'Tienes una petición de asignación'
+        : ('Pendiente de aceptación por ' + (destinatarioNombre || 'usuario'))" matTooltipPosition="above"
+        matTooltipShowDelay="250" matTooltipHideDelay="0" [matTooltipDisabled]="tooltipDisabled"
+        (mousedown)="tooltipDisabled = true" (mouseup)="tooltipDisabled = false" (mouseleave)="tooltipDisabled = false">
+        <mat-icon>{{ peticionParaMi ? 'notifications_active' : 'notifications' }}</mat-icon>
+      </button>
+    </span>
+    }
+
   </div>
 
   <hr class="divider" />
@@ -29,7 +43,9 @@
   <hr class="divider" />
 
   <div class="boton-asignar">
-    <button mat-icon-button [matMenuTriggerFor]="menu" [matTooltip]="tooltipAsignacion" [disabled]="!puedeAbrirMenu">
+    <button mat-icon-button [matMenuTriggerFor]="menu"
+      [matTooltip]="peticionPendiente ? 'Bloqueada: hay una petición pendiente' : tooltipAsignacion"
+      [disabled]="!puedeAbrirMenu || peticionPendiente">
       <mat-icon [fontIcon]="'person_add'"></mat-icon>
     </button>
 
