Ajustes en añadir/traspasar peticion y notificar al usuario si la peticion ha sido aceptada/rechazada

--- a/src/app/core/tareas/component/tareas/peticiones/dialog-peticion-asignacion.component.html
+++ b/src/app/core/tareas/component/tareas/peticiones/dialog-peticion-asignacion.component.html
@@ -11,15 +11,16 @@
     </p>
 
     <div class="acciones">
-      <button mat-button (click)="rechazar()">
+      <button mat-button class="btn-rechazar" (click)="rechazar()">
         <mat-icon fontIcon="close"></mat-icon>
         Rechazar
       </button>
 
-      <button mat-raised-button color="primary" (click)="aceptar()">
+      <button mat-raised-button color="primary" (click)="aceptar()" cdkFocusInitial>
         <mat-icon fontIcon="check"></mat-icon>
         Aceptar
       </button>
     </div>
+
   </div>
 </div>
