--- a/src/app/core/tareas/component/tareas/lista-tareas.component.html
+++ b/src/app/core/tareas/component/tareas/lista-tareas.component.html
@@ -171,6 +171,9 @@
     </span>
   </div>
 
+  <app-notificador [uidSolicitante]="(usuario$ | async)?.uid || ''" (verTarea)="onVerTarea($event)">
+  </app-notificador>
+
   <div class="selector-filtro">
     <button #triggerEstado class="btn-filtro" (click)="toggleFiltroEstado($event)">
       <span class="icono-texto">
@@ -226,11 +229,9 @@
   <div class="grid-tareas">
     @for (tarea of tareas; track tarea.id; let i = $index) {
     <app-tarjeta-tarea [tarea]="tarea" [uidActual]="usuario?.uid || ''" [miembros]="miembros" [delay]="i"
-      [peticionParaMi]="peticionesMap[tarea.id!]"
       [destinatarioNombre]="peticionesPorTareaMap[tarea.id!]?.destinatarioNombre"
-      [peticionPendiente]="!!peticionesPorTareaMap[tarea.id!]"
-      [peticionPendienteInfo]="peticionesPorTareaMap[tarea.id!]" (asignadoCambio)="onAsignadoCambio(tarea, $event)"
-      (penalizarAbandono)="onPenalizarAbandono($event)" (tareaCompletada)="onTareaCompletada(tarea)">
+      (asignadoCambio)="onAsignadoCambio(tarea, $event)" (penalizarAbandono)="onPenalizarAbandono($event)"
+      (tareaCompletada)="onTareaCompletada(tarea)">
     </app-tarjeta-tarea>
     }
   </div>
